# flowistry-icse-experiments

./: .gitignore  Dockerfile  README.md  README.txt  init.sh  requirements.txt
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs  visitor.rs
crates/flowistry-user-study/: Cargo.toml
crates/flowistry-user-study/src/: cli.rs  countries.rs  grep.rs  lib.rs  progress.rs  tutorial.rs  url.rs
crates/user-study/: Cargo.toml
crates/user-study/src/: allocator.rs  cli.rs  countries.rs  db.rs  eval.rs  grep.rs  lib.rs  median.rs  progress.rs  regex.rs  tutorial_step2.rs  url.rs
eval/: Cargo.toml
eval/src/: lib.rs  visitor.rs
notebooks/: analysis.ipynb  execute.ipynb  rs_utils.rs  slice-size-analysis.ipynb  slice-size-execute.ipynb  study-results.csv  user-study.ipynb
