[package]
authors = ["Anonymous"]
edition = "2018"
name = "flowistry-eval"
version = "0.1.0"

[package.metadata.rust-analyzer]
rustc_private=true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = "2.33"
env_logger = "0.8"
itertools = "0.10"
log = "0.4"
flowistry = {path = "../../flowistry"}
fluid-let = {git = "https://github.com/ilammy/fluid-let", rev = "17388c4"}