[package]
authors = ["<redacted>"]
edition = "2018"
name = "flowistry-eval"
version = "0.1.0"

[package.metadata.rust-analyzer]
rustc_private=true

[dependencies]
anyhow = "1"
clap = "2.33"
env_logger = "0.8"
itertools = "0.10"
log = "0.4"
fluid-let = "1.0"
flowistry = {path = "../flowistry/crates/flowistry"}
flowistry_ide = {path = "../flowistry/crates/flowistry_ide"}

[profile.release]
debug = true
